--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,12 @@
 @import url("styles/rodapé.css");
 
 :root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
-    --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --cor-de-fundo: #000000;
+    --branco: #ffffff;
+    --laranja: #elecf3;
+    --azul-degrade: linear-gradient(97.54deg, #000000 35.49%, #e1ecf3 165.37%);
     --fonte-principal: "Poppins";
-    --azul: #002F52;
+    --azul: #000000;
     --fonte-secundario: "Josefin Sans";
     --preto: #000000;
     --cinza: #474646;
